--- a/style.css
+++ b/style.css
@@ -16,8 +16,12 @@ body {
 
 .wrapper {
     display: grid;
-    grid-template-rows: 100px auto;
+    grid-template-rows: 100px auto 100px;
     overflow: auto;
+}
+
+.restartArea {
+    background-color: red;
 }
 
 nav {
@@ -28,6 +32,8 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .gameboard {
@@ -48,5 +54,31 @@ main {
 }
 
 footer {
-    background-color: blue;
-}
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: var(--myDark);
+  }
+  
+  footer img {
+    width: 100px;
+  }
+  
+  footer img:hover {
+    animation: shake 0.5s;
+  }
+  
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
