--- a/style.css
+++ b/style.css
@@ -21,11 +21,24 @@ body {
 }
 
 .restartArea {
-    background-color: red;
 }
 
-nav {
-    background-color: green;
+.restartArea button {
+    border-style: none;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: lightblue;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+header {
+    background-color: slategray;
+    z-index: 10;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.473); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 main {
@@ -43,14 +56,10 @@ main {
 }
 
 .cell {
-    border: solid blue;
+    border: solid black;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.gameboard.active {
-    background-color: pink;
 }
 
 footer {
@@ -58,27 +67,27 @@ footer {
     justify-content: center;
     align-items: center;
     padding: 20px;
-    background-color: var(--myDark);
-  }
+    background-color: slategray;
+}
   
-  footer img {
-    width: 100px;
-  }
-  
-  footer img:hover {
-    animation: shake 0.5s;
-  }
-  
-  @keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
-  }
+footer img {
+width: 100px;
+}
+
+footer img:hover {
+animation: shake 0.5s;
+}
+
+@keyframes shake {
+0% { transform: translate(1px, 1px) rotate(0deg); }
+10% { transform: translate(-1px, -2px) rotate(-1deg); }
+20% { transform: translate(-3px, 0px) rotate(1deg); }
+30% { transform: translate(3px, 2px) rotate(0deg); }
+40% { transform: translate(1px, -1px) rotate(1deg); }
+50% { transform: translate(-1px, 2px) rotate(-1deg); }
+60% { transform: translate(-3px, 1px) rotate(0deg); }
+70% { transform: translate(3px, 1px) rotate(-1deg); }
+80% { transform: translate(-1px, -1px) rotate(1deg); }
+90% { transform: translate(1px, 2px) rotate(0deg); }
+100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
